--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.772">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/ivogin"
+            android:id="@+id/ivLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
