add fill associations

--- a/app/src/main/res/layout/fragment_reg_first.xml
+++ b/app/src/main/res/layout/fragment_reg_first.xml
@@ -88,7 +88,8 @@
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/spAssociation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:spinnerMode="dropdown"
             android:background="@color/transparent" />
 
         <androidx.appcompat.widget.AppCompatImageView
