--- a/app/src/main/res/layout/fragment_reg_second.xml
+++ b/app/src/main/res/layout/fragment_reg_second.xml
@@ -51,6 +51,7 @@
         android:layout_height="0dp"
         android:background="@drawable/shape_field_fill"
         android:drawableStart="@drawable/ic_vi_user"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
