--- a/app/src/main/res/layout/fragment_reg_third.xml
+++ b/app/src/main/res/layout/fragment_reg_third.xml
@@ -95,6 +95,7 @@
         android:background="@drawable/shape_field_fill"
         android:drawableStart="@drawable/ic_vi_user"
         android:paddingStart="10dp"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
