--- a/app/src/main/res/layout/fragment_reg_second_association.xml
+++ b/app/src/main/res/layout/fragment_reg_second_association.xml
@@ -36,7 +36,7 @@
         android:id="@+id/tvFamilyNameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/email"
+        android:text="@string/family_name"
         android:textColor="@color/grey1"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         app:layout_constraintVertical_bias="0.537" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etMobileTitle"
+        android:id="@+id/etMobile"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_unfill"
@@ -102,6 +102,7 @@
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:inputType="textEmailAddress"
         android:background="@drawable/shape_field_unfill"
         android:drawableStart="@drawable/ic_vi_password"
         android:paddingStart="10dp"
