1) validation of first contributer  registration 2) implements get website (with cookie and token) 3) design add logo in association registration

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="grey5">#A2A2A2</color>
     <color name="error">#E80000</color>
     <color name="grey6">#F4F6FE</color>
+    <color name="grey7">#737373</color>
 </resources>
