--- a/app/src/main/res/layout/fragment_reg_second.xml
+++ b/app/src/main/res/layout/fragment_reg_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RegFirstFragment">
+    tools:context=".registration.fragment.RegFirstFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDateBirth"
@@ -22,9 +22,9 @@
         android:id="@+id/etTelNum"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
+        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
@@ -40,6 +40,7 @@
         android:text="@string/email"
         android:textColor="@color/grey1"
         android:textSize="12sp"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/etEmail"
         app:layout_constraintTop_toTopOf="parent"
@@ -49,8 +50,7 @@
         android:id="@+id/etEmail"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/shape_field_unfill"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,8 +77,7 @@
         android:id="@+id/etCity"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="@+id/etEmail"
         app:layout_constraintHeight_default="percent"
