--- a/app/src/main/res/layout/fragment_reg_third.xml
+++ b/app/src/main/res/layout/fragment_reg_third.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RegFirstFragment">
+    tools:context=".registration.fragment.RegFirstFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvDateBirth"
