--- a/app/src/main/res/layout/fragment_regfifth_associate.xml
+++ b/app/src/main/res/layout/fragment_regfifth_associate.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RegfifthAssociateFragment">
+    tools:context=".registration.fragment.RegfifthAssociateFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
