--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,21 +45,25 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/frame_user"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.276"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.060"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.75"
         tools:ignore="RtlSymmetry"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/password"
@@ -68,19 +72,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/etUsername"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.355" />
+        app:layout_constraintVertical_bias="0.355"
+        />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/frame_password"
-        android:drawableStart="@drawable/ic_vi_password"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.060"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.75"
         app:layout_constraintVertical_bias="0.402"
         tools:ignore="RtlSymmetry"
         />
@@ -113,6 +122,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
+            android:clickable="true"
+            android:enabled="false"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/button_connect" />
 
