--- a/app/src/main/res/layout/fragment_reg_third.xml
+++ b/app/src/main/res/layout/fragment_reg_third.xml
@@ -92,9 +92,9 @@
         android:id="@+id/etUser"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/shape_field_unfill"
         android:paddingStart="10dp"
+        android:enabled="false"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
@@ -120,8 +120,8 @@
         android:id="@+id/etPassword"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/shape_field_fill"
-        android:drawableStart="@drawable/ic_vi_user"
+        android:background="@drawable/shape_field_unfill"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="@+id/etUser"
         app:layout_constraintHeight_default="percent"
