--- a/app/src/main/res/layout/fragment_reg_second_association.xml
+++ b/app/src/main/res/layout/fragment_reg_second_association.xml
@@ -75,8 +75,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/shape_field_unfill"
-        android:drawableStart="@drawable/ic_vi_password"
         android:paddingStart="10dp"
+        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="@+id/etFamilyName"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
@@ -104,7 +104,6 @@
         android:layout_height="0dp"
         android:inputType="textEmailAddress"
         android:background="@drawable/shape_field_unfill"
-        android:drawableStart="@drawable/ic_vi_password"
         android:paddingStart="10dp"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.134"
