1) implements wizard number 3 in association registration 2) implements if email already exist in association registration

--- a/app/src/main/res/layout/fragment_reg_second_association.xml
+++ b/app/src/main/res/layout/fragment_reg_second_association.xml
@@ -112,4 +112,16 @@
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.93" />
 
+    <ProgressBar
+        android:id="@+id/emailProgressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
